--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "rhino-react-image-lightbox-rotate": "^1.2.4",
+    "react-image-lightbox": "^5.1.4",
     "sass": "^1.77.4",
     "styled-components": "^6.1.11",
     "swiper": "^11.1.4",
