--- a/package.json
+++ b/package.json
@@ -6,20 +6,34 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.18.3",
+    "axios": "0.27.2",
     "dayjs": "^1.11.11",
+    "moment": "^2.30.1",
     "next": "14.2.3",
+    "nookies": "^2.5.2",
+    "query-string": "^9.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-flatpickr": "^3.10.13",
+    "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-sweet-state": "^2.7.2",
+    "react-toastify": "^10.0.5",
     "sass": "^1.77.4",
     "styled-components": "^6.1.11",
     "swiper": "^11.1.4",
+    "tour-ecommerce": "file:",
     "yarn": "^1.22.22",
-    "yet-another-react-lightbox": "^3.20.0"
+    "yet-another-react-lightbox": "^3.20.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
