--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@paypal/react-paypal-js": "^8.6.0",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.18.3",
     "axios": "0.27.2",
