--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
+    "@mui/material": "^6.1.1",
     "@paypal/react-paypal-js": "^8.6.0",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.18.3",
@@ -21,6 +24,7 @@
     "nookies": "^2.5.2",
     "query-string": "^9.1.0",
     "react": "^18",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18",
     "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.53.0",
