--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-paginate": "^8.2.0",
     "react-sweet-state": "^2.7.2",
     "react-toastify": "^10.0.5",
     "sass": "^1.77.4",
